<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NuevoPacienteActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:id="@+id/fabAtras"
        android:src="@mipmap/atras"
        tools:ignore="MissingConstraints">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <EditText
        android:id="@+id/txtNombreNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nombre"/>

    <EditText
        android:id="@+id/txtApellidoNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/apellido"/>

    <EditText
        android:id="@+id/txtTelefonoNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/telefono"/>

    <EditText
        android:id="@+id/txtEmailNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/txtRucNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ruc"/>

    <EditText
        android:id="@+id/txtCiNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ci"/>

    <EditText
        android:id="@+id/txtTipoNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/tipo"/>

    <EditText
        android:id="@+id/txtFechaNacimientoNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/fechaNacimiento"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="agregarNuevoPaciente"
        android:text="@string/agregar" />

</LinearLayout>