<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TurnoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtE">>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvListadoTurnos">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <EditText
        android:id="@+id/txtC"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/idCliente"/>
    <Button
        android:id="@+id/getCliente"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtC"
        android:onClick="verReservaCliente"
        android:text="@string/buscar"/>

    <EditText
        android:id="@+id/txtE"
        android:layout_width="90dp"
        android:layout_below="@id/getCliente"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/idEmpleado"/>
    <EditText
        android:id="@+id/txtReservaDesde"
        android:layout_width="105dp"
        android:layout_toRightOf="@id/txtE"
        android:layout_below="@id/getCliente"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/desde"/>
    <EditText
        android:id="@+id/txtReservaHasta"
        android:layout_width="105dp"
        android:layout_toRightOf="@id/txtReservaDesde"
        android:layout_below="@id/getCliente"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hasta"/>
    <Button
        android:id="@+id/getFisio"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtReservaHasta"
        android:layout_below="@id/getCliente"
        android:onClick="verReservaFisioterapeuta"
        android:text="@string/buscar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNuevoTurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/outline_add_white_48">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/atras"
        tools:ignore="MissingConstraints">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</RelativeLayout>