<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FichaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtfechaHasta">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvListadoFichas">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <EditText
        android:id="@+id/txtEm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/idEmpleado"
        android:inputType="text" />
    <Button
        android:id="@+id/getEm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtEm"
        android:onClick="verPorEmpleado"
        android:text="@string/buscar" />

    <EditText
        android:id="@+id/txtCli"
        android:layout_width="250dp"
        android:layout_below="@id/getEm"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/idCliente"/>
    <Button
        android:id="@+id/getCli"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtCli"
        android:layout_below="@id/getEm"
        android:onClick="verPorCliente"
        android:text="@string/buscar"/>

    <EditText
        android:id="@+id/txtfechaDesde"
        android:layout_width="125dp"
        android:layout_below="@id/getCli"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/desde"/>
    <EditText
        android:id="@+id/txtfechaHasta"
        android:layout_width="125dp"
        android:layout_toRightOf="@id/txtfechaDesde"
        android:layout_below="@id/getCli"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hasta"/>
    <Button
        android:id="@+id/getPeriodo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtfechaHasta"
        android:layout_below="@id/getCli"
        android:onClick="verPorPeriodo"
        android:text="@string/buscar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNuevaFicha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/outline_add_white_48">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/atras"
        tools:ignore="MissingConstraints">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</RelativeLayout>